--- a/src/pages/articles/how-did-i-built-this-website/index.mdx
+++ b/src/pages/articles/how-did-i-built-this-website/index.mdx
@@ -5,20 +5,20 @@ import designSystem from './planetaria-design-system.png'
 export const meta = {
   author: 'Federico Pomponii',
   date: '2022-10-18',
-  title: 'How did I started to create this website',
+  title: 'How did I started creating this website',
   inProgress: true,
   description:
-    'I started to create this website to share my knowledge and my experience with the open source world. I decided to start with something simple, but I wanted to use the latest technologies.',
+    'I started developing this website to share my knowledge and my experience with the open source world. I decided to start with something simple, but I wanted to use the latest technologies.',
 }
 
 export default (props) => <ArticleLayout meta={meta} {...props} />
 
 GitHub Repo - [pmpwith2i/fpomponii.it](https://github.com/pmpwith2i/fpomponii.it)
 
-Some days ago I looked at my old website, and I realized that it was time to update it. I started to create this website to share my knowledge and my experience with the open source world. I decided to start with something simple, but I wanted to use the latest technologies.
+Some days ago I looked at my old website, and I realized that it was time to update it. I started developing this website to share my knowledge and my experience with the open source world. I decided to start with something simple, but I wanted to use the latest technologies.
 The idea behind this new website was to start with something easy to develop and then, incrementally, improve it.
 
-I decided to use [Tailwind CSS](https://tailwindcss.com/) and [Tailwind UI](https://tailwindui.com/) to create the UI of the website, this because Tailwind offers a lot of templates and components, this speed-up the work.
+I decided to use [Tailwind CSS](https://tailwindcss.com/) and [Tailwind UI](https://tailwindui.com/) for creating the UI of the website, this because Tailwind offers a lot of templates and components, this speed-up the work.
 My website is built with React + Next.Js, I used Next.Js because I wanted to use the SSR for improve my website SEO.
 
 The most interesting part of this website is the blog, right now you're reading my post, written in an .MDX file, and then, transformed in a React component. I used MDX to write my posts, because I wanted to use the power of React inside my posts, and I wanted to use the power of Markdown to write it.
