fix: change title of article #1

--- a/src/pages/articles/how-did-i-built-this-website/index.mdx
+++ b/src/pages/articles/how-did-i-built-this-website/index.mdx
@@ -5,7 +5,7 @@ import designSystem from './planetaria-design-system.png'
 export const meta = {
   author: 'Federico Pomponii',
   date: '2022-10-18',
-  title: 'How did I develop my personal website',
+  title: 'How I developed my personal website',
   inProgress: true,
   description:
     'I started developing this website to share my knowledge and my experience with the open source world. I decided to start with something simple, but I wanted to use the latest technologies.',
